# cinn-jit-playground

./: .gitignore  CMakeLists.txt  README.md
include/: bn_registry.cuh  bn_template.cuh  cuda_utils.cuh  reduce.cuh  semaphore.cuh  soa_reduce.cuh  tensor.cuh
scripts/: compare_nsys.py  ncu_prof.sh  ncu_prof_cmd.sh  parse_ncu.py  prof.sh  run_batched.sh
src/: bn_registry.cu
tests/: bn_128_56_1284.cu  reduce.cu  trial_batched.cu  trial_manual.cu
tests/batch_norm/: bn_64_56_192_div.cu
tests/manual/: bn_400_72_384.cu  bn_64_48_224.cu  bn_64_56_192.cu
